--- a/cenovnik.html
+++ b/cenovnik.html
@@ -38,7 +38,7 @@
 					<p>Treninzi u grupi</p>
 					<p>Redovan sparing u svakoj trening sekciji</p>
 					<p>Uobičajen način treninga u kome ćete trenirati sa iskusnijim bokserima koji će Vam, zajedno sa trenerom, pomoći da Vaše veštine dovedete do perfekcije</p>
-					<a href="kontakt.html"><input type="submit" value="Prijavi se za program" id="submit-cenovnik"/></a>
+					<a href="#"><input type="submit" value="Prijavi se za program" id="submit-cenovnik"/></a>
 				</div>	
 			</div>
 			<div class="program1">
@@ -51,7 +51,7 @@
 					<p>Pravljenje plana ishrane po Vašoj meri</p>
 					<p>Dodatno upoznavanje sa bokserskim tehnikama i jačanje snage</p>
 					<p>Redovan sparing u svakoj trening sekciji</p>
-					<a href="kontakt.html"><input type="submit" value="Prijavi se za program" id="submit-cenovnik"/></a>
+					<a href="#"><input type="submit" value="Prijavi se za program" id="submit-cenovnik"/></a>
 				</div>	
 			</div>
 			<div class="program2">
@@ -64,7 +64,7 @@
 					<p>Pravljenje plana ishrane po Vašoj meri</p>
 					<p>Maksimalni rezultati za relativno kratak vremenski period</p>
 					<p>Redovan sparing u svakoj trening sekciji</p>
-					<a href="kontakt.html"><input type="submit" value="Prijavi se za program" id="submit-cenovnik"/></a>
+					<a href="#"><input type="submit" value="Prijavi se za program" id="submit-cenovnik"/></a>
 				</div>
 			</div>
 		</div>
